ffix bug
