# controllers/students.js
@@ -3,37 +3,36 @@ const ObjectId = require('mongodb').ObjectId;
 
 
 
-const allStudents = async (req, res) => {
+const getAll = async (req, res) => {
+    //#swagger.tags=['Students']
     const result = await mongodb.getDb().db().collection('students').find();
-    result.toArray((err, lists) => {
-        if (err) {
-            res.status(400).json({ message: err });
-        }
+    result.toArray().then((lists) => {
         res.setHeader('Content-Type', 'application/json');
         res.status(200).json(lists);
     });
 };
 
 
-const singleStudent = async (req, res) => {
+
+const getSingle = async (req, res) => {
+    //#swagger.tags=['Students']
     if (!ObjectId.isValid(req.params.id)) {
-        res.status(400).json("You need a valid course id to find a studnet.");
+        res.status(400).json('A valid student id is required to find a student information')
     }
     const userId = new ObjectId(req.params.id);
     const result = await mongodb.getDb().db().collection('students').find({ _id: userId });
-    result.toArray((err, result) => {
-        if (err) {
-            res.status(400).json({ message: err });
-        }
+    result.toArray().then((lists) => {
         res.setHeader('Content-Type', 'application/json');
-        res.status(200).json(result[0]);
+        res.status(200).json(lists[0]);
     });
 };
 
 
-const newStudent = async (req, res) => {
+const createStudent = async (req, res) => {
+    //#swagger.tags=['Students']
+    console.log(req.body)
     const student = {
-        firstName: req.body.firstNam,
+        firstName: req.body.firstName,
         lastName: req.body.lastName,
         sex: req.body.sex,
         dob: req.body.dob,
@@ -44,27 +43,23 @@ const newStudent = async (req, res) => {
         enrolledDate: req.body.enrolledDate,
         plannedGrad: req.body.plannedGrad
     };
-    const result = await mongodb.getDb().db().collection('students').insertOne(student);
-    if (result) {
-        res.setHeader('Content-Type', 'application/json');
-        res.status(201).json({
-            message: 'Student added succesfully',
-            newStudent: result
-        });
+    const response = await mongodb.getDb().db().collection('students').insertOne(student);
+    if (response.acknowledged) {
+        res.status(201).json(response);
     } else {
-        res.status(500).json({
-            message: 'An error occured while creating new student'
-        });
+        res.status(500).json(response.error || 'Some error occured. Student not  created.');
     }
 };
 
+
 const updateStudent = async (req, res) => {
+    //#swagger.tags=['Students']
     if (!ObjectId.isValid(req.params.id)) {
-        res.status(400).json("You need a valid course id to update this student.");
+        res.status(400).json('A valid student id is required to update a student information')
     }
-    const userId = new ObjectId({ id: req.params.id });
+    const userId = new ObjectId(req.params.id);
     const student = {
-        firstName: req.body.firstNam,
+        firstName: req.body.firstName,
         lastName: req.body.lastName,
         sex: req.body.sex,
         dob: req.body.dob,
@@ -74,102 +69,41 @@ const updateStudent = async (req, res) => {
         major: req.body.major,
         enrolledDate: req.body.enrolledDate,
         plannedGrad: req.body.plannedGrad
-    };
 
-    const result = await mongodb
+    };
+    const response = await mongodb
         .getDb()
         .db()
         .collection('students')
         .replaceOne({ _id: userId }, student);
-    if (result.modifiedCount > 0) {
-        res.status(204).json({
-            message: 'Students updated successfully'
-        });
+    console.log(response);
+    if (response.modifiedCount > 0) {
+        res.status(204).send('Student updated successfully!');
     } else {
-        res.status(500).json({
-            message: 'An error occured while updating'
-        });
+        res.status(500).json(response.error || 'Some error occurred while updating with studnet Id.');
     }
 };
 
+
 const deleteStudent = async (req, res) => {
+    //#swagger.tags=['Students']
     if (!ObjectId.isValid(req.params.id)) {
-        res.status(400).json("You need a valid course id to delete a student.");
+        res.status(400).json('A valid student id is required to delete a student information')
     }
-    const userId = new ObjectId({ id: req.params.id });
-    // const student = {
-    //     firstName: req.body.firstNam,
-    //     lastName: req.body.lastName,
-    //     sex: req.body.sex,
-    //     dob: req.body.dob,
-    //     email: req.body.email,
-    //     classification: req.body.classification,
-    //     track: req.body.track,
-    //     major: req.body.major,
-    //     enrolledDate: req.body.enrolledDate,
-    //     plannedGrad: req.body.plannedGrad
-    // };
-    const result = await mongodb
+    const userId = new ObjectId(req.params.id);
+    const response = await mongodb
         .getDb()
         .db()
         .collection('students')
-        .deleteOne({ _id: userId }, student);
-    if (result) {
-        res.status(200).json({
-            message: 'Student deleted successfully'
-        });
+        .remove({ _id: userId }, true);
+    console.log(response);
+    if (response.deletedCount > 0) {
+        res.status(200).send('Student deleted successfully');
     } else {
-        res.status(500).json({
-            message: 'An error occured while deleting'
-        });
+        res.status(500).json(response.error || 'Some error occurred while deleting a student with this Id.');
     }
 };
 
-
-module.exports = { allStudents, singleStudent, newStudent, updateStudent, deleteStudent };
-
-
-
-
-
-
-
-
-// const db = require('../models');
-// const Student = db.students;
-
-// // // Create a Temple
-
-// //     firstName: req.body.firstNam,
-// //     lastName: req.body.lastName,
-// //     sex: req.body.sex,
-// //     dob: req.body.dob,
-// //     email: req.body.email,
-// //     classification: req.body.classification,
-// //     track: req.body.track,
-// //     major: req.body.major,
-// //     enrolledDate: req.body.enrolledDate,
-// //     plannedGrad: req.body.plannedGrad
-// // });
-
-// // Find a single Temple with an id
-// exports.findOne = (req, res) => {
-//     const student = req.params.student;
-//     Student.find({ student: student })
-//         .then((data) => {
-//             if (!data)
-//                 res
-//                     .status(404)
-//                     .send({ message: 'Not found Student with name ' + student });
-//             else res.send(data[0]);
-//         })
-//         .catch((err) => {
-//             res.status(500).send({
-//                 message: 'Error retrieving Student with name=' + student,
-//                 error: err
-//             });
-//         });
-
-// };
+module.exports = { getAll, getSingle, createStudent, updateStudent, deleteStudent };
 
 
